# Garbage-collector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: header.hpp
include/Base_ds/: header_chunk.hpp  header_lists.hpp
include/High_lvl/: GC_B.hpp  Mem_manager.hpp
include/Stack_scanner/: StackScanner.hpp
include/collector/: collector_header.hpp
main/: GC_main.cpp
source/: GC_main.cpp
source/DS/: Chunk.cpp  FreeLists.cpp
source/High_lev/: GC_B.cpp  Mem_manager.cpp
source/Stack_scanner_source/: StackScanner.cpp
source/collector_sources/: collector.cpp
tests/: GC_TESTS.cpp
